<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:padding="@dimen/padding_margin_double">

    <TextView
        android:id="@+id/banBillTitleTextView"
        style="@style/NMF.Styles.Text.BigBody.SemiBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mobility_bill"
        />

    <TextView
        android:id="@+id/banBillAmountTextView"
        style="@style/NMF.Styles.Text.Branded.Title2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/price_dollar"

        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/banBillRefTextView"
        style="@style/NMF.Styles.Defaults.Text.Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_margin_half"


        android:text="3345671892009"

        app:layout_constraintTop_toBottomOf="@id/banBillTitleTextView"
        />


    <TextView
        android:id="@+id/banBillDueDateTextView"
        style="@style/NMF.Styles.Defaults.Text.Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_margin_half"

        android:text="@string/due_by"

        app:layout_constraintTop_toBottomOf="@id/banBillAmountTextView"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/banSecondaryButton"
        style="@style/NMF.Styles.Button.Outlined"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginRight="@dimen/padding_margin"

        android:text="@string/view_bill"

        app:layout_constraintTop_toTopOf="@id/banPrimaryButton"
        app:layout_constraintRight_toLeftOf="@id/banPrimaryButton"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/banPrimaryButton"
        style="@style/NMF.Styles.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/padding_margin_double"
        android:layout_marginLeft="@dimen/padding_margin"

        android:text="@string/pay_now"

        app:layout_constraintTop_toBottomOf="@id/banBillDueDateTextView"
        app:layout_constraintLeft_toRightOf="@id/banSecondaryButton"
        app:layout_constraintRight_toRightOf="parent"
        />

</android.support.constraint.ConstraintLayout>